Fix tablet overview spacing

--- a/styles/scss/styles-common.scss
+++ b/styles/scss/styles-common.scss
@@ -18,6 +18,12 @@
   }
 }
 
+.no-tablet {
+  @include respond-tablet {
+    display: none;
+  }
+}
+
 html,
 body {
   height: 100%;
